@@ -2,8 +2,8 @@
 
  Author:
    Mike Krüger <mkrueger@novell.com>
-öö
- Copyright (c) 2007 Novell, Inc (http://www.novell.com)
+
+ Copyright (c) 2008 Novell, Inc (http://www.novell.com)
 
  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
