@@ -1,0 +1,386 @@
+<!-- PythonSyntaxMode.xml
+
+ Author:
+   Mike Krüger <mkrueger@novell.com>
+
+ Copyright (c) 2008 Novell, Inc (http://www.novell.com)
+
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"), to deal
+ in the Software without restriction, including without limitation the rights
+ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ copies of the Software, and to permit persons to whom the Software is
+ furnished to do so, subject to the following conditions:
+
+ The above copyright notice and this permission notice shall be included in
+ all copies or substantial portions of the Software.
+
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ THE SOFTWARE. -->
+ 
+<SyntaxMode name = "Python" mimeTypes="text/x-python">
+	
+	<EolSpan color = "comment" rule="Comment" tagColor="commenttag">#</EolSpan>
+	
+	<Span color = "comment" rule="Comment" tagColor="commenttag">
+		<Begin>/*</Begin>
+		<End>*/</End>
+	</Span>
+	
+	<Span color = "literal" rule="String" stopateol = "true" escape="\">
+		<Begin>"""</Begin>
+		<End>"""</End>
+	</Span>
+	
+	<Span color = "literal" rule="String" stopateol = "true" escape="\">
+		<Begin>'''</Begin>
+		<End>'''</End>
+	</Span>
+	
+	<Span color = "literal" rule="String" stopateol = "true" escape="\">
+		<Begin>"</Begin>
+		<End>"</End>
+	</Span>
+	
+	<Span color = "literal" rule="String" stopateol = "true" escape="\">
+		<Begin>'</Begin>
+		<End>'</End>
+	</Span>
+	
+	<Keywords color = "kw:access">
+	</Keywords>
+	
+	<Keywords color = "kw:operator">
+	</Keywords>
+	
+	<Keywords color = "kw:selection">
+		<Word>and</Word>
+		<Word>assert</Word>
+		<Word>break</Word>
+		<Word>class</Word>
+		<Word>continue</Word>
+		<Word>def</Word>
+		<Word>del</Word>
+		<Word>elif</Word>
+		<Word>else</Word>
+		<Word>except</Word>
+		<Word>exec</Word>
+		<Word>finally</Word>
+		<Word>for</Word>
+		<Word>global</Word>
+		<Word>if</Word>
+		<Word>in</Word>
+		<Word>is</Word>
+		<Word>lambda</Word>
+		<Word>not</Word>
+		<Word>or</Word>
+		<Word>pass</Word>
+		<Word>print</Word>
+		<Word>raise</Word>
+		<Word>return</Word>
+		<Word>try</Word>
+		<Word>while</Word>
+		<Word>yield</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:iteration">
+	</Keywords>
+	
+	<Keywords color = "kw:jump">
+		<Word>abs</Word>
+		<Word>all</Word>
+		<Word>any</Word>
+		<Word>apply</Word>
+		<Word>basestring</Word>
+		<Word>bool</Word>
+		<Word>buffer</Word>
+		<Word>callable</Word>
+		<Word>chr</Word>
+		<Word>classmethod</Word>
+		<Word>cmp</Word>
+		<Word>coerce</Word>
+		<Word>compile</Word>
+		<Word>complex</Word>
+		<Word>delattr</Word>
+		<Word>dict</Word>
+		<Word>dir</Word>
+		<Word>divmod</Word>
+		<Word>enumerate</Word>
+		<Word>eval</Word>
+		<Word>execfile</Word>
+		<Word>file</Word>
+		<Word>filter</Word>
+		<Word>float</Word>
+		<Word>frozenset</Word>
+		<Word>getattr</Word>
+		<Word>globals</Word>
+		<Word>hasattr</Word>
+		<Word>hash</Word>
+		<Word>hex</Word>
+		<Word>id</Word>
+		<Word>input</Word>
+		<Word>int</Word>
+		<Word>intern</Word>
+		<Word>isinstance</Word>
+		<Word>issubclass</Word>
+		<Word>iter</Word>
+		<Word>len</Word>
+		<Word>list</Word>
+		<Word>locals</Word>
+		<Word>long</Word>
+		<Word>map</Word>
+		<Word>max</Word>
+		<Word>min</Word>
+		<Word>object</Word>
+		<Word>oct</Word>
+		<Word>open</Word>
+		<Word>ord</Word>
+		<Word>pow</Word>
+		<Word>property</Word>
+		<Word>range</Word>
+		<Word>raw_input</Word>
+		<Word>reduce</Word>
+		<Word>reload</Word>
+		<Word>repr</Word>
+		<Word>reversed</Word>
+		<Word>round</Word>
+		<Word>setattr</Word>
+		<Word>set</Word>
+		<Word>slice</Word>
+		<Word>sorted</Word>
+		<Word>staticmethod</Word>
+		<Word>str</Word>
+		<Word>sum</Word>
+		<Word>super</Word>
+		<Word>tuple</Word>
+		<Word>type</Word>
+		<Word>unichr</Word>
+		<Word>unicode</Word>
+		<Word>vars</Word>
+		<Word>xrange</Word>
+		<Word>zip</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:context">
+		<Word>False</Word>
+		<Word>None</Word>
+		<Word>True</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:exceptions">
+		<Word>ArithmeticError</Word>
+		<Word>AssertionError</Word>
+		<Word>AttributeError</Word>
+		<Word>EnvironmentError</Word>
+		<Word>EOFError</Word>
+		<Word>Exception</Word>
+		<Word>FloatingPointError</Word>
+		<Word>ImportError</Word>
+		<Word>IndentationError</Word>
+		<Word>IndexError</Word>
+		<Word>IOError</Word>
+		<Word>KeyboardInterrupt</Word>
+		<Word>KeyError</Word>
+		<Word>LookupError</Word>
+		<Word>MemoryError</Word>
+		<Word>NameError</Word>
+		<Word>NotImplementedError</Word>
+		<Word>OSError</Word>
+		<Word>OverflowError</Word>
+		<Word>ReferenceError</Word>
+		<Word>RuntimeError</Word>
+		<Word>StandardError</Word>
+		<Word>StopIteration</Word>
+		<Word>SyntaxError</Word>
+		<Word>SystemError</Word>
+		<Word>SystemExit</Word>
+		<Word>TabError</Word>
+		<Word>TypeError</Word>
+		<Word>UnboundLocalError</Word>
+		<Word>UnicodeDecodeError</Word>
+		<Word>UnicodeEncodeError</Word>
+		<Word>UnicodeError</Word>
+		<Word>UnicodeTranslateError</Word>
+		<Word>ValueError</Word>
+		<Word>WindowsError</Word>
+		<Word>ZeroDivisionError</Word>
+		
+		<Word>Warning</Word>
+		<Word>UserWarning</Word>
+		<Word>DeprecationWarning</Word>
+		<Word>PendingDeprecationWarning</Word>
+		<Word>SyntaxWarning</Word>
+		<Word>OverflowWarning</Word>
+		<Word>RuntimeWarning</Word>
+		<Word>FutureWarning</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:literals">
+	</Keywords>
+	
+	<Keywords color = "kw:modifiers">
+	</Keywords>
+	
+	<Keywords color = "kw:types">
+		<Word>BufferType</Word>
+		<Word>BuiltinFunctionType</Word>
+		<Word>BuiltinMethodType</Word>
+		<Word>ClassType</Word>
+		<Word>CodeType</Word>
+		<Word>ComplexType</Word>
+		<Word>DictProxyType</Word>
+		<Word>DictType</Word>
+		<Word>DictionaryType</Word>
+		<Word>EllipsisType</Word>
+		<Word>FileType</Word>
+		<Word>FloatType</Word>
+		<Word>FrameType</Word>
+		<Word>FunctionType</Word>
+		<Word>GeneratorType</Word>
+		<Word>InstanceType</Word>
+		<Word>IntType</Word>
+		<Word>LambdaType</Word>
+		<Word>ListType</Word>
+		<Word>LongType</Word>
+		<Word>MethodType</Word>
+		<Word>ModuleType</Word>
+		<Word>NoneType</Word>
+		<Word>ObjectType</Word>
+		<Word>SliceType</Word>
+		<Word>StringType</Word>
+		<Word>StringTypes</Word>
+		<Word>TracebackType</Word>
+		<Word>TupleType</Word>
+		<Word>TypeType</Word>
+		<Word>UnboundMethodType</Word>
+		<Word>UnicodeType</Word>
+		<Word>XRangeType</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:void">
+	</Keywords>
+	
+	<Keywords color = "kw:namespaces">
+		<Word>import</Word>
+		<Word>from</Word>
+		<Word>as</Word>
+	</Keywords>
+	
+	<Keywords color = "kw:properties">	</Keywords>
+	
+	<Keywords color = "kw:declarations">
+	</Keywords>
+	
+	<Keywords color = "kw:parameter">
+	</Keywords>
+	
+	<Keywords color = "kw:operatordecl">
+	</Keywords>
+	
+	<Keywords color = "kw:misc">
+		<Word>__abs__</Word>
+		<Word>__add__</Word>
+		<Word>__all__</Word>
+		<Word>__author__</Word>
+		<Word>__bases__</Word>
+		<Word>__builtins__</Word>
+		<Word>__call__</Word>
+		<Word>__class__</Word>
+		<Word>__cmp__</Word>
+		<Word>__coerce__</Word>
+		<Word>__contains__</Word>
+		<Word>__debug__</Word>
+		<Word>__del__</Word>
+		<Word>__delattr__</Word>
+		<Word>__delitem__</Word>
+		<Word>__delslice__</Word>
+		<Word>__dict__</Word>
+		<Word>__div__</Word>
+		<Word>__divmod__</Word>
+		<Word>__doc__</Word>
+		<Word>__docformat__</Word>
+		<Word>__eq__</Word>
+		<Word>__file__</Word>
+		<Word>__float__</Word>
+		<Word>__floordiv__</Word>
+		<Word>__future__</Word>
+		<Word>__ge__</Word>
+		<Word>__getattr__</Word>
+		<Word>__getattribute__</Word>
+		<Word>__getitem__</Word>
+		<Word>__getslice__</Word>
+		<Word>__gt__</Word>
+		<Word>__hash__</Word>
+		<Word>__hex__</Word>
+		<Word>__iadd__</Word>
+		<Word>__import__</Word>
+		<Word>__imul__</Word>
+		<Word>__init__</Word>
+		<Word>__int__</Word>
+		<Word>__invert__</Word>
+		<Word>__iter__</Word>
+		<Word>__le__</Word>
+		<Word>__len__</Word>
+		<Word>__long__</Word>
+		<Word>__lshift__</Word>
+		<Word>__lt__</Word>
+		<Word>__members__</Word>
+		<Word>__metaclass__</Word>
+		<Word>__mod__</Word>
+		<Word>__mro__</Word>
+		<Word>__mul__</Word>
+		<Word>__name__</Word>
+		<Word>__ne__</Word>
+		<Word>__neg__</Word>
+		<Word>__new__</Word>
+		<Word>__nonzero__</Word>
+		<Word>__oct__</Word>
+		<Word>__or__</Word>
+		<Word>__path__</Word>
+		<Word>__pos__</Word>
+		<Word>__pow__</Word>
+		<Word>__radd__</Word>
+		<Word>__rdiv__</Word>
+		<Word>__rdivmod__</Word>
+		<Word>__reduce__</Word>
+		<Word>__repr__</Word>
+		<Word>__rfloordiv__</Word>
+		<Word>__rlshift__</Word>
+		<Word>__rmod__</Word>
+		<Word>__rmul__</Word>
+		<Word>__ror__</Word>
+		<Word>__rpow__</Word>
+		<Word>__rrshift__</Word>
+		<Word>__rsub__</Word>
+		<Word>__rtruediv__</Word>
+		<Word>__rxor__</Word>
+		<Word>__setattr__</Word>
+		<Word>__setitem__</Word>
+		<Word>__setslice__</Word>
+		<Word>__self__</Word>
+		<Word>__slots__</Word>
+		<Word>__str__</Word>
+		<Word>__sub__</Word>
+		<Word>__truediv__</Word>
+		<Word>__version__</Word>
+		<Word>__xor__</Word>
+	</Keywords>
+
+	<Rule name = "Comment">
+		<Keywords color="todocomment" ignorecase="True">
+			<Word>TODO</Word>
+			<Word>FIXME</Word>
+			<Word>HACK</Word>
+			<Word>UNDONE</Word>
+		</Keywords>	
+	</Rule>
+	
+	<Rule name = "String">
+	</Rule>
+	
+</SyntaxMode>
