@@ -1,3 +1,7 @@
+2008-03-01  Mike Krüger <mkrueger@novell.com> 
+
+	* PythonSyntaxMode.xml: Added python syntax highlighting.
+
 2008-02-29  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
  
  	* CPPSyntaxMode.xml, CSyntaxMode.xml: Added headers to highlighted mime
